# arcworld

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  conditions.json  pyproject.toml  pyrightconfig.json  transformations.json
arcworld/: examples.py  utils.py
arcworld/deprecated/: generator_conditional_transforms.py  generator_utils.py
arcworld/deprecated/generator_configs/: ct_config.json
arcworld/dsl/: arc_constants.py  arc_types.py  functional.py  shape_utils.py  util.py
arcworld/filters/: objects_filter.py
arcworld/filters/dsl/: dsl_filter.py
arcworld/filters/functional/: shape_filter.py  single_shape_conditionals.py
arcworld/grid/: README.md  conditional_dsl.py  grid_protocol.py  subgrid_pickup_sampler.py
arcworld/grid/dsl/: grid_dsl.py
arcworld/grid/oop/: grid_bruteforce.py  grid_oop.py  util.py
arcworld/internal/: complexity.py  constants.py  program.py
arcworld/internal/point_cloud/: point_cloud.py  utils.py
arcworld/objects/: base_generator.py
arcworld/objects/dsl/: generator.py  utils.py
arcworld/schematas/dsl/conditional/: conditional_dsl.py
arcworld/schematas/oop/drop/: grid.py  transforms.py
arcworld/schematas/oop/expansion/: grid.py  intersection_line.py  intersection_shape.py  line.py  transforms.py
arcworld/schematas/oop/subgrid_pickup/: base_pickup.py  pickups.py  (+3 more)
arcworld/shape/: base_generator.py  resamplers.py
arcworld/shape/dsl/: augmentations.py  generator.py  utils.py
arcworld/shape/oop/: base.py  utils.py
arcworld/storage/: README.md  fingerprint.py  table.py  utils.py
arcworld/training/: README.md  dataloader.py  distributed.py  metrics.py  pixeltransformer.py  sampler.py  train.py  trainer.py  trainer_piexeltransformer.py  transformer_total_loader.py  utils.py
arcworld/training/conf/: config.yaml
arcworld/training/models/: No_LayerNorm_Count.py  pixeltransformer.py  pixeltransformer_modified.py  utils.py
arcworld/transformations/: base_transform.py  objects_transform.py
arcworld/transformations/dsl/: dsl_transform.py
arcworld/transformations/functional/: shape_cardinality.py
arcworld/transformations/oop/: base_pickup_alteration.py  color_cardinality.py  grid_picking.py  pickup_alteration.py  single_shape_transformations.py
datasets/: proto_shapes.pickle  shapes.pickle  tasks.db
examples/: predict_task.py  read_db.py  subgrid_picking.py
examples/expansion/: dots.py  test.ipynb
examples/gravity/: drop.py  test.ipynb
examples/reverse_engineered/: 5b6cbef5.py  replicate_based_on_shape.py  switching_pairs.py
examples/tasks/: replicate_based_on_shape.py
tests/: test_shape_generator.py
(+20 files in other folders)
