[tool.poetry]
name = "arcworld"
version = "0.0.1"
description = "Synthetic task generation for the ARC Challange"
authors = ["Kevin Lopez <kevinlo@student.ethz.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
scipy = "^1.9.3"
pandas = "^2.0.2"
tqdm = "^4.65"
matplotlib = "*"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
ruff = "^0.0.272"
black = "^23.3.0"
# pyright = "^1.1.314"
mypy = "^1.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"


[tool.black]
line-length = 88
include = 'arcworld\/.*\.pyi?$ | tests\/.*\.pyi?$' # Matches only python files in the package.
extend-exclude = '''
(
  arcworld/deprecated
)
'''

[tool.isort]
profile = "black"
src_paths = ["arcworld", "tests"]
skip_glob = ["arcworld/deprecated/*"]

[tool.ruff]
line-length = 88
src = ["arcworld"]
select = ["E", "F", "W", "N", "E266", "E262"]
ignore = ["N812"]
include = ["arcworld/*.py", "arcworld/*.pyi", "tests/*.py", "tests.*pyi"]
extend-exclude = ["arcworld/deprecated", "arcworld/examples.py"]
# No rule should be fixed automatically
fixable = []

[tool.mypy]
files = "arcworld/*.pyi?$"
exclude = ["arcworld/deprecated", "arcworld/dsl/shape_utils.py"]
custom_typeshed_dir = "/home/kev/Builds/typeshed"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
